homework3-crud/kuber/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework3-depl
  namespace: homework3
  labels:
    app: homework3-app
spec:
  replicas: 3
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: homework3-app
  template:
    metadata:
      labels:
        app: homework3-app
    spec:
      containers:
      - name: homework3-container
        image: lancer7082/otus-msa-homework3:1.3
        ports:
        - containerPort: 8000
