homework3-crud/kuber/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework3-postgres-depl
  namespace: homework3
  labels:
    app: homework3-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homework3-app
      name: postgres-pod
  template:
    metadata:
      labels:
        app: homework3-app
        name: postgres-pod
    spec:
      containers:
        - name: postgres
          image: postgres:15.4-alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: homework3-postgres-pvc
