homework3-crud/kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework3-ingress
  namespace: homework3
  labels:
    app: homework3-app  
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homework3-service
            port:
              number: 8000
